# add42

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  default.nix  docker.md  docker.nix  package.list
.github/workflows/: build.yml  docker.yml  mdbook.yml
app/: main.cpp
include/: mymaths.hpp
mdbook/: book.toml
mdbook/src/: SUMMARY.md  compilation.md  introduction.md  usage.md
src/: mymaths.cpp
test/: mymaths-test.cpp
